# System

./: CMakeLists.txt
.github/workflows/: main.yml
include/System/: DotNet.hpp  Encoding.hpp  Endianness.hpp  Filesystem.h  FunctionName.hpp  FunctionTraits.hpp  Guid.hpp  Library.h  LoopBreak.hpp  ScopedLock.hpp  String.hpp  StringSwitch.hpp  StringUtils.hpp  StringView.hpp  System.h  SystemCPUExtensions.h  SystemCompiler.h  SystemDetector.h  SystemExports.h  SystemInline.h  SystemMacro.h  ThreadPool.hpp  TypeName.hpp
src/: CPUExtentions.cpp  DotNet.cpp  Encoding.cpp  Filesystem.cpp  Guid.cpp  Library.cpp  String.cpp  System.cpp  SystemExports.cpp  System_internals.cpp  System_internals.h  WinRegister.cpp  WinRegister.h
tests/: build_linux.sh  build_macos.sh  catch.hpp  main.cpp  shared_main.cpp
tests/TestDotNetLoader/: Class1.cs  TestDotNetLoader.csproj  TestDotNetLoader.sln  build_win.bat
tests/build_windows/: build_windows.sln  build_windows.vcxproj  build_windows.vcxproj.filters  shared_library.vcxproj  shared_library.vcxproj.filters
